Added initial work for `addTagToResultHandler` lambda
